// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContainer renders correctly with filters 1`] = `
<styled.div>
  <List />
  <WithStyles(ForwardRef(Grid))>
    <styled.div
      phone="100"
    >
      <_default />
    </styled.div>
  </WithStyles(ForwardRef(Grid))>
</styled.div>
`;

exports[`AppContainer renders correctly without filters 1`] = `
<styled.div>
  <WithStyles(ForwardRef(Grid))>
    <styled.div
      phone="100"
    >
      <_default />
    </styled.div>
  </WithStyles(ForwardRef(Grid))>
</styled.div>
`;

exports[`Wrapper renders correctly 1`] = `
.c0 * {
  box-sizing: border-box;
}

<div
  class="c0"
/>
`;
